# python-project-50

./: .gitignore  Makefile  README.md  generate_diff.py  pyproject.toml
.github/workflows/: check.yml
gendiff/: __init__.py
gendiff/formatters/: formatter_selection.py  json.py  plain.py  stylish.py
gendiff/parse/: diff.py
gendiff/scripts/: build_diff.py  gendiff.py  generate_diff.py  parser.py
tests/: test_gendiff.py
tests/fixtures/: json_result.txt
